<resources>
    <string name="app_name">Main Dashboard</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="_1">1</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="_2">2</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="_3">3</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="_4">4</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="_5">5</string>
    <string name="tabel_layout">Tabel Layout</string>
    <string name="_6">6</string>
    <string name="material_design">Material Design</string>
    <string name="_7">7</string>
    <string name="scroll_view">Scroll View</string>
    <string name="_8">8</string>
    <string name="scroll_view_horizontal">Scroll View Horizontal</string>
    <string name="back">Back</string>
    <string name="reminder">Reminder</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tombol">Tombol</string>
    <string name="submit">Submit</string>
    <string name="username">Username :</string>
    <string name="text_button">Text Button</string>
    <string name="scrollview">ScrollView</string>
    <string name="welcome_to_tutlane">Welcome to Tutlane</string>
    <string name="button_one">Button One</string>
    <string name="button_two">Button Two</string>
    <string name="button_three">Button Three</string>
    <string name="button_four">Button Four</string>
    <string name="button_five">Button Five</string>
    <string name="button_six">Button Six</string>
    <string name="button_seven">Button Seven</string>
    <string name="button_eight">Button Eight</string>
    <string name="button_nine">Button Nine</string>
</resources>