<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/LinearLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_1"
                android:onClick="linear"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/linear_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/RelativeLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_2"
                android:onClick="relative"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/relative_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/Constraintayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_3"
                android:onClick="constraint"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/constraint_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/FrameLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_4"
                android:onClick="frame"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/frame_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/TabelLayout"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_5"
                android:onClick="tabel"
                android:textSize="40sp" />
            <TextView
                android:id="@+id/textTabelLayout"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/tabel_layout"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/MaterialDesign"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_6"
                android:onClick="material"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textMaterialDesign"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/material_design"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ScrollView"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_7"
                android:onClick="scroll"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textScrollView"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/scroll_view"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            tools:context=".MainActivity">
            <Button
                android:id="@+id/ScrollViewHorizontal"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:text="@string/_8"
                android:onClick="scroll2"
                android:textSize="40sp"/>
            <TextView
                android:id="@+id/textScrollViewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/scroll_view_horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

