<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableRow
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/login"
            android:textColor="#890000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:layout_marginTop="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginStart="20dip"/>
        <EditText
            android:id="@+id/screenName"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginStart="20dip"/>
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="20dip">
        <Button
            android:text="@string/submit"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_span="2"
            android:focusable="true" />
    </TableRow>
</TableLayout>